fix: popup sizing on firefox

--- a/tailwind/styles.css
+++ b/tailwind/styles.css
@@ -3,9 +3,8 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
-    width: 400px; /* max: 1000px */
-    height: 500px; /* max: 750px */
+body {
+    width: 450px; /* max: 1000px */
 }
 
 #flavours button {
